2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (window_make_modeline): Subtract height of
	window from length of node when calculating percentage
	position in node so that it smoothly scales from 0% to 100%.
	
2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_get_labeled_reference)
	(info_menu_entry_by_label): Renamed.  Only look for menu items.
	
	* info/man.c (manpage_node_of_file_buffer): Set nodelen and nodestart
	field in returned NODE.
	(xrefs_of_manpage): If no references, return array with a single
	null entry instead of null. Set type fields to REFERENCE_XREF.
	* info/window.c: (window_make_modeline) If preprocess_nodes_p is
	set, display less information in status bar.
	* info/nodes.c (get_node_length): Function no longer static.
	Definition moved in file.
	
2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c, info/info-utils.h (info_menu_of_node)
	(info_xrefs_of_node, info_menu_items, info_xrefs)
	(info_references_internal): Functions deleted.
	* info/info-utils.c (info_parse_label): Function and associated
	macros deleted.

2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (info_read_completing_internal) New argument
	exclude_func.  All callers changed.
	(completion_exclude_func): New variable.
	(info_read_completing_in_echo_area_with_exclusions): New function.
	(build_completions): Exclude completions using
	completion_exclude_func.
	* info/session.c (exclude_cross_references, exclude_menu_items)
	(exclude_nothing): New static functions.
	
	* info/footnotes.c (make_footnotes_node)
	* info/indices.c (info_indices_of_file_buffer, select_visited_node)
	(apropos_in_all_indices)
	* info/nodemenu.c (select_visited_node)
	* info/session.c (forward_move_node_structure)
	(backward_move_node_structure)
	(info_handle_pointer, select_menu_digit)
	(info_menu_digit, info_menu_or_ref_item, info_visit_menu) 
	(info_follow_menus, entry_in_menu, info_intuit_options_mode)